Working version of loading pages and an array of cards from Mongo. Fixed CSS so lists have proper spacing and the navbar links are the proper 600 weight. Removed autopublish and added Trumbowyg for HTML WYSIWYG editing.

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -19,9 +19,12 @@ h3, h4, h5, h6 {
 }
 
 p {
+	margin: 0 0 20px;
+}
+
+p, ul, ol, li, a, html {
 	font-family: $small-stack;
 	font-size: 12pt;
-	margin: 0 0 20px;
 }
 
 .shadow {
