--- a/client/style/navbar.scss
+++ b/client/style/navbar.scss
@@ -11,6 +11,7 @@
 	font-family: $big-stack;
 	text-transform: uppercase;
 	font-size: 18px;
+	font-weight: 600;
 }
 
 .navbar-inverse .navbar-nav > li > a {
